--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,52 @@ jobs:
       - name: Run Integration Tests
         run: mvn -B -DskipUnitTests verify
 
+  security-scan:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: 17
+
+    - name: Cache Local Maven Repo
+      uses: actions/cache@v2.1.2
+      with:
+        path: ~/.m2/repository
+        key: maven-repo
+
+    - uses: s4u/maven-settings-action@v2.4.0
+      with:
+        servers: |
+          [{"id": "highmed", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"},
+           {"id": "codex", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]
+
+    - name: Maven Package
+      run: mvn -B -DskipUnitTests -DskipIntegrationTests package
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        tags: security-scan-build:latest
+        push: false
+
+    - name: Run Trivy Vulnerability Scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: 'security-scan-build:latest'
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
+
   release:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs: [ unit-tests, integration-tests ]
+    needs: [ unit-tests, security-scan, integration-tests ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -112,4 +155,7 @@ jobs:
         tags: |
           ghcr.io/${{ steps.prep.outputs.repository }}:latest
           ghcr.io/${{ steps.prep.outputs.repository }}:${{ steps.prep.outputs.version }}
-        push: true
+        push: false
+
+
+
