--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.3</version>
+    <version>2.6.4</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>de.num-codex</groupId>
@@ -33,9 +33,14 @@
       <dependency>
         <groupId>org.keycloak.bom</groupId>
         <artifactId>keycloak-adapter-bom</artifactId>
-        <version>12.0.4</version>
+        <version>16.1.1</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk15on</artifactId>
+        <version>1.69</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -60,7 +65,7 @@
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-spring-boot-starter</artifactId>
-      <version>12.0.4</version>
+      <version>16.1.1</version>
     </dependency>
 
     <dependency>
