--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.9.3</mockwebserver.version>
     <okhttp3.version>4.9.1</okhttp3.version>
+    <postgresql.version>42.4.1</postgresql.version>
   </properties>
 
   <dependencyManagement>
