Fix Problems in POM
Removed duplicate dependencies, added group ID to failsafe plugin and
excluded vulnerable dependency commons-collections.

Also added result.log to .gitignore and removed duplicate .project entry.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ target/
 .apt_generated
 .classpath
 .factorypath
-.project
 .settings
 .springBeans
 .sts4-cache
@@ -48,3 +47,5 @@ googleCodeStyle.xml
 ### ui-profiles ###
 /ontology/ui_profiles/
 /logging/
+
+result.log
