--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.3</version>
+    <version>3.3.4</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>de.medizininformatik-initiative</groupId>
   <artifactId>DataportalBackend</artifactId>
-  <version>6.0.0-alpha.2</version>
+  <version>6.0.0-alpha.3</version>
 
   <name>Dataportal Backend</name>
   <description>Backend of the Dataportal</description>
@@ -27,7 +27,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.10.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
-    <ontology-tag>v3.0.0-test.2</ontology-tag>
+    <ontology-tag>v3.0.0-alpha</ontology-tag>
   </properties>
 
   <dependencies>
@@ -49,17 +49,17 @@
     <dependency>
       <groupId>io.undertow</groupId>
       <artifactId>undertow-core</artifactId>
-      <version>2.3.16.Final</version>
+      <version>2.3.17.Final</version>
     </dependency>
     <dependency>
       <groupId>io.undertow</groupId>
       <artifactId>undertow-servlet</artifactId>
-      <version>2.3.16.Final</version>
+      <version>2.3.17.Final</version>
     </dependency>
     <dependency>
       <groupId>io.undertow</groupId>
       <artifactId>undertow-websockets-jsr</artifactId>
-      <version>2.3.16.Final</version>
+      <version>2.3.17.Final</version>
     </dependency>
 
     <dependency>
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>2.0.4</version>
+      <version>2.6.0</version>
     </dependency>
 
     <dependency>
@@ -199,6 +199,12 @@
     </dependency>
 
     <dependency>
+      <groupId>ca.uhn.hapi.fhir</groupId>
+      <artifactId>org.hl7.fhir.utilities</artifactId>
+      <version>6.3.26</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.bucket4j</groupId>
       <artifactId>bucket4j-core</artifactId>
       <version>8.2.0</version>
@@ -237,7 +243,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.3.0</version>
+      <version>v0.5.0-alpha.1</version>
     </dependency>
 
     <dependency>
